[package]
name = "port_scanner_async"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
trust-dns-resolver = "0.21.0"
futures = "0.3"
tokio-stream = "0.1"