[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "3.1", features = ["cargo"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"
select = "0.6.0-alpha.1"
url = "2.2"
futures = "0.3"
tokio-stream = "0.1"
fantoccini = { version = "0.19", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"